# rust_react_template

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  SECURITY.md  docker-compose.observability.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/crates/api/: Cargo.toml
backend/crates/api/src/: error.rs  extractors.rs  main.rs  routes.rs  state.rs  telemetry.rs
backend/crates/api/src/handlers/: auth.rs  google.rs  mod.rs  tasks.rs  users.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: lib.rs  ports.rs
backend/crates/application/src/auth/: google.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs
backend/crates/application/src/tasks/: create_task.rs  delete_task.rs  get_task.rs  list_tasks.rs  mod.rs  update_task.rs
backend/crates/application/src/users/: get_user.rs  list_users.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: errors.rs  lib.rs  password.rs  task.rs  user.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/src/: cache.rs  config.rs  lib.rs
backend/crates/infrastructure/src/auth/: argon2_hasher.rs  mod.rs  redis_jwt_sessions.rs
backend/crates/infrastructure/src/oauth/: google.rs  jwks.rs  mod.rs
backend/crates/infrastructure/src/postgres/: mod.rs  task_repository.rs  user_repository.rs
backend/migrations/: 20260609000000_init.sql  20260611123645_add_google_oauth.sql  20260612000000_add_tasks.sql
frontend/app/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/app/src/: App.tsx  index.css  main.tsx
frontend/app/src/components/: google-button.tsx  session-bootstrap.tsx  theme-toggle.tsx
frontend/app/src/components/layout/: app-shell.tsx  auth-shell.tsx  footer.tsx  header.tsx  sidebar.tsx  user-badge.tsx
frontend/app/src/components/ui/: index.ts  skeleton.tsx
frontend/app/src/hooks/: use-auth.ts  use-oauth-error.ts  use-sidebar.ts
frontend/app/src/lib/: api.ts  auth-store.ts  tasks-api.ts  theme.ts
frontend/app/src/routes/: dashboard.tsx  guest-route.tsx  login.tsx  profile.tsx  protected-route.tsx  register.tsx  tasks.tsx  users.tsx
frontend/app/src/test/: utils.tsx
frontend/app/src/types/: auth.ts  tasks.ts
nginx/: Dockerfile  nginx.conf
observability/grafana/dashboards/: backend-red.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/loki/: loki.yaml
observability/otel-collector/: config.yaml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail.yaml
observability/tempo/: tempo.yaml
