[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/api",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
# Internal crates
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework (axum 0.8 uses `/{id}` path-param syntax)
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"
# Pin `time` patch version: without Cargo.lock, the resolver grabs the
# latest 0.3.x where `ModifierValue::Type = Self` plus cookie 0.18.1's
# broad `impl<T: Into<Option<OffsetDateTime>>> From<T> for Expiration`
# trip Rust 1.90's coherence check (E0119). Pin until cookie ships a fix.
time = "=0.3.51"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header"] }
tower_governor = "0.8"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Errors
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
# `semconv_experimental` is needed for stable names like DEPLOYMENT_ENVIRONMENT_NAME
# (otel keeps moving these between "stable" and "experimental" between releases).
opentelemetry-semantic-conventions = { version = "0.26", features = ["semconv_experimental"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
axum-prometheus = "0.7"

# Config
dotenvy = "0.15"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
# HMAC-SHA256 for refresh-token MAC (already in dep-tree via argon2 → password-hash)
hmac = "0.12"
sha2 = "0.10"

# OAuth2 (Google)
oauth2 = "4"
# Used only by the OAuth client to call Google's userinfo endpoint.
# `rustls-tls` keeps us off OpenSSL; `gzip` cuts response size; `json` for `.json()`.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
