[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
application = { workspace = true }
infrastructure = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
cookie = { workspace = true }
# Direct dep so the workspace `=0.3.36` pin actually binds the resolver
# for the cookie/time interaction (see comment in workspace Cargo.toml).
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
