[package]
name = "infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
domain = { workspace = true }
application = { workspace = true }

async-trait = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }

# Auth
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# OAuth (Google)
oauth2 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
